[FIX]
testing fix
- on mobile device there is white space below every page

--- a/general.css
+++ b/general.css
@@ -29,7 +29,7 @@ body {
   height: 100%;
   min-height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 .mask {
