--- a/queries.css
+++ b/queries.css
@@ -1,5 +1,5 @@
 /* GENERAL for NAV */
-@media (max-width: 767px) {
+@media (max-width: 48em) {
   body.body-destination {
     background-image: url(starter-code/assets/destination/background-destination-mobile.jpg);
   }
@@ -10,7 +10,7 @@
     background-image: url(starter-code/assets/technology/background-technology-mobile.jpg);
   }
 }
-@media (min-width: 767px) {
+@media (min-width: 48em) {
   body.body-destination {
     background-image: url(starter-code/assets/destination/background-destination-mobile.jpg);
   }
@@ -22,7 +22,7 @@
   }
 }
 /* GENERAL for NAV */
-@media (min-width: 767px) {
+@media (min-width: 48em) {
   .mobile-menu-btn {
     display: none;
   }
@@ -105,7 +105,7 @@
     background-image: url(starter-code/assets/technology/background-technology-tablet.jpg);
   }
 }
-@media (min-width: 767px) and (max-width: 1199px) {
+@media (min-width: 767px) and (max-width: 74.937rem) {
   .nav-link span {
     display: none;
   }
